--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,26 +10,16 @@ RUN npm install
 COPY . .
 
 # Build static app
-RUN npm run build
+RUN ["npm", "run", "build"]
 
-
-# Multistage build to ditch npm and node (lightweight image)
+# Serve build with Nginx
 FROM nginx:stable-alpine
 
-# Install envsubst for env variable substitution
-RUN apk add --no-cache gettext
-
-# Copy the React build output from the previous stage
+# Copy built files from previous stage
 COPY --from=builder /app/build /usr/share/nginx/html
 
-# Remove default Nginx conf file
-RUN rm /etc/nginx/conf.d/default.conf
-
-# Use nginx.conf.template for env variable substitution
-COPY nginx.conf.template /etc/nginx/templates/nginx.conf.template
-
-# Expose port 80
+# Expose port
 EXPOSE 80
 
-# Start Nginx as primary process so container stays alive
+# Run nginx in foreground
 CMD ["nginx", "-g", "daemon off;"]
